--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@awesome-cordova-plugins/vibration": "^5.39.1",
+    "@capacitor-community/contacts": "^1.1.3",
     "@capacitor/android": "3.4.1",
     "@capacitor/app": "1.1.0",
     "@capacitor/core": "3.4.1",
